{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 248,
  "lineage": "d4e09398-2781-ce8e-854d-7aab0c8dbd0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f5d1d5097830aaa3",
            "domain": "vpc",
            "id": "eipalloc-0676b214e4bd873b6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00cf521faea1b572b",
            "private_dns": "ip-10-16-13-148.ec2.internal",
            "private_ip": "10.16.13.148",
            "public_dns": "ec2-3-223-171-50.compute-1.amazonaws.com",
            "public_ip": "3.223.171.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01c0f40277153f45d",
            "domain": "vpc",
            "id": "eipalloc-068fdb80b176f9971",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b4ce3c506fa3eab5",
            "private_dns": "ip-10-16-72-7.ec2.internal",
            "private_ip": "10.16.72.7",
            "public_dns": "ec2-34-232-37-103.compute-1.amazonaws.com",
            "public_ip": "34.232.37.103",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05300007185ebca5a",
            "domain": "vpc",
            "id": "eipalloc-01058b6412592f037",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0336898b466b2f5cd",
            "private_dns": "ip-10-16-133-196.ec2.internal",
            "private_ip": "10.16.133.196",
            "public_dns": "ec2-3-232-114-173.compute-1.amazonaws.com",
            "public_ip": "3.232.114.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:374072300041:instance/i-01900fc2f3db3c8d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01900fc2f3db3c8d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0705b6144d8f2d59e",
            "private_dns": "ip-10-16-8-124.ec2.internal",
            "private_ip": "10.16.8.124",
            "public_dns": "ec2-35-171-153-69.compute-1.amazonaws.com",
            "public_ip": "35.171.153.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011f5f457cc9d3bb6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bffc9c25561a611",
            "tags": {
              "Name": "Demo"
            },
            "tags_all": {
              "Name": "Demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da2b52ac03697d91"
            ]
          },
          "dependencies": [
            "aws_key_pair.wakau_key",
            "aws_security_group.jump_security_group",
            "aws_subnet.reserved",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:internet-gateway/igw-0ef8f4a3e0966379d",
            "id": "igw-0ef8f4a3e0966379d",
            "owner_id": "374072300041",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0676b214e4bd873b6",
            "connectivity_type": "public",
            "id": "nat-07341301b0911ca54",
            "network_interface_id": "eni-00cf521faea1b572b",
            "private_ip": "10.16.13.148",
            "public_ip": "3.223.171.50",
            "subnet_id": "subnet-07bffc9c25561a611",
            "tags": {
              "Name": "NAT-GW-1"
            },
            "tags_all": {
              "Name": "NAT-GW-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068fdb80b176f9971",
            "connectivity_type": "public",
            "id": "nat-077c37b10a8467648",
            "network_interface_id": "eni-0b4ce3c506fa3eab5",
            "private_ip": "10.16.72.7",
            "public_ip": "34.232.37.103",
            "subnet_id": "subnet-02b827ae0942ea114",
            "tags": {
              "Name": "NAT-GW-2"
            },
            "tags_all": {
              "Name": "NAT-GW-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01058b6412592f037",
            "connectivity_type": "public",
            "id": "nat-02e156bca490c2efb",
            "network_interface_id": "eni-0336898b466b2f5cd",
            "private_ip": "10.16.133.196",
            "public_ip": "3.232.114.173",
            "subnet_id": "subnet-0226c8147a450f00f",
            "tags": {
              "Name": "NAT-GW-3"
            },
            "tags_all": {
              "Name": "NAT-GW-3"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_eip.nat",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:network-acl/acl-03c45c7b204c7b450",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03c45c7b204c7b450",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "374072300041",
            "subnet_ids": [
              "subnet-051c2f1af9017ac89",
              "subnet-0c40a7afa2ba11fef",
              "subnet-0d3cd1c122e0f2320"
            ],
            "tags": {
              "Name": "App-NACL"
            },
            "tags_all": {
              "Name": "App-NACL"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:network-acl/acl-0d956c7984d365331",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d956c7984d365331",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "374072300041",
            "subnet_ids": [
              "subnet-06ce0d56cbb3c7959",
              "subnet-08e1ac1acd078ce19",
              "subnet-0b35759c88417cc60"
            ],
            "tags": {
              "Name": "DB-NACL"
            },
            "tags_all": {
              "Name": "DB-NACL"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.db",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "reserved",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:network-acl/acl-058179945bc6c044a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-058179945bc6c044a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "374072300041",
            "subnet_ids": [
              "subnet-0226c8147a450f00f",
              "subnet-02b827ae0942ea114",
              "subnet-07bffc9c25561a611"
            ],
            "tags": {
              "Name": "Reserved-NACL"
            },
            "tags_all": {
              "Name": "Reserved-NACL"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:network-acl/acl-002876efe4fd1dc82",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-002876efe4fd1dc82",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "374072300041",
            "subnet_ids": [
              "subnet-02225fc4879630215",
              "subnet-02cacbf0e64b8f2e8",
              "subnet-07ba444d910507c56"
            ],
            "tags": {
              "Name": "WEB-NACL"
            },
            "tags_all": {
              "Name": "WEB-NACL"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.web",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4038077630",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03c45c7b204c7b450",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs",
            "aws_network_acl.app"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3949195101",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03c45c7b204c7b450",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.app",
            "aws_subnet.app",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3293149722",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d956c7984d365331",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs",
            "aws_network_acl.db",
            "aws_subnet.db"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3068268118",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d956c7984d365331",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db",
            "aws_subnet.db",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "reserved",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1216969122",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-058179945bc6c044a",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.reserved",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2771453518",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-058179945bc6c044a",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.reserved",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2339712981",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002876efe4fd1dc82",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.web",
            "aws_subnet.web",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1920253918",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-002876efe4fd1dc82",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.web",
            "aws_subnet.web",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-05de9b7a986193612",
            "id": "rtb-05de9b7a986193612",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07341301b0911ca54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APP-RT-1"
            },
            "tags_all": {
              "Name": "APP-RT-1"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-0845ffd20f83c81fd",
            "id": "rtb-0845ffd20f83c81fd",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-077c37b10a8467648",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APP-RT-2"
            },
            "tags_all": {
              "Name": "APP-RT-2"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-04b2d048967024382",
            "id": "rtb-04b2d048967024382",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02e156bca490c2efb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APP-RT-3"
            },
            "tags_all": {
              "Name": "APP-RT-3"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-0c5b01b98a37a3d47",
            "id": "rtb-0c5b01b98a37a3d47",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07341301b0911ca54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DB-RT-1"
            },
            "tags_all": {
              "Name": "DB-RT-1"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-0dc286a2e12c91d0d",
            "id": "rtb-0dc286a2e12c91d0d",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-077c37b10a8467648",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DB-RT-2"
            },
            "tags_all": {
              "Name": "DB-RT-2"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-0e587182d0996df3d",
            "id": "rtb-0e587182d0996df3d",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02e156bca490c2efb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DB-RT-3"
            },
            "tags_all": {
              "Name": "DB-RT-3"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ng",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "reserved_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-0670b0a3d1d1ad012",
            "id": "rtb-0670b0a3d1d1ad012",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef8f4a3e0966379d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RESERVED-RT"
            },
            "tags_all": {
              "Name": "RESERVED-RT"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:route-table/rtb-01995a021ccccab7f",
            "id": "rtb-01995a021ccccab7f",
            "owner_id": "374072300041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef8f4a3e0966379d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WEB-RT"
            },
            "tags_all": {
              "Name": "WEB-RT"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b80be4f508913872",
            "route_table_id": "rtb-05de9b7a986193612",
            "subnet_id": "subnet-0c40a7afa2ba11fef"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.app_rt",
            "aws_subnet.app",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e37b830a700ea092",
            "route_table_id": "rtb-0845ffd20f83c81fd",
            "subnet_id": "subnet-0d3cd1c122e0f2320"
          },
          "dependencies": [
            "aws_route_table.app_rt",
            "aws_subnet.app",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs",
            "aws_eip.nat",
            "aws_nat_gateway.ng"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9bb69f9e775a332",
            "route_table_id": "rtb-04b2d048967024382",
            "subnet_id": "subnet-051c2f1af9017ac89"
          },
          "dependencies": [
            "aws_subnet.app",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs",
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.app_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d05dcf9d99a83906",
            "route_table_id": "rtb-0c5b01b98a37a3d47",
            "subnet_id": "subnet-0b35759c88417cc60"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.db_rt",
            "aws_subnet.db",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1ee7fd986baa6fd",
            "route_table_id": "rtb-0dc286a2e12c91d0d",
            "subnet_id": "subnet-08e1ac1acd078ce19"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.db_rt",
            "aws_subnet.db",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d7e5762c41c7053",
            "route_table_id": "rtb-0e587182d0996df3d",
            "subnet_id": "subnet-06ce0d56cbb3c7959"
          },
          "dependencies": [
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs",
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.db_rt",
            "aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "reserved",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0456cbc9096324d0c",
            "route_table_id": "rtb-0670b0a3d1d1ad012",
            "subnet_id": "subnet-07bffc9c25561a611"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.reserved_rt",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdc90a2109485c9d",
            "route_table_id": "rtb-0670b0a3d1d1ad012",
            "subnet_id": "subnet-02b827ae0942ea114"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.reserved_rt",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081a1127a4186fd16",
            "route_table_id": "rtb-0670b0a3d1d1ad012",
            "subnet_id": "subnet-0226c8147a450f00f"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.reserved_rt",
            "aws_subnet.reserved",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0931871b0fff445b4",
            "route_table_id": "rtb-01995a021ccccab7f",
            "subnet_id": "subnet-02225fc4879630215"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.web_rt",
            "aws_subnet.web",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b71eebfdeefe27a2",
            "route_table_id": "rtb-01995a021ccccab7f",
            "subnet_id": "subnet-07ba444d910507c56"
          },
          "dependencies": [
            "aws_route_table.web_rt",
            "aws_subnet.web",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs",
            "aws_internet_gateway.main_igw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0790601da7835aeae",
            "route_table_id": "rtb-01995a021ccccab7f",
            "subnet_id": "subnet-02cacbf0e64b8f2e8"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.web_rt",
            "aws_subnet.web",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:security-group/sg-0da2b52ac03697d91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da2b52ac03697d91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Testing",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Jump Security",
            "name_prefix": "",
            "owner_id": "374072300041",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wakau Jump SG"
            },
            "tags_all": {
              "Name": "Wakau Jump SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jump_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow All Outbound",
            "from_port": 0,
            "id": "sgrule-2733226724",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0da2b52ac03697d91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jump_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Testing",
            "from_port": 0,
            "id": "sgrule-633859215",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0da2b52ac03697d91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-0c40a7afa2ba11fef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.32.0/20",
            "id": "subnet-0c40a7afa2ba11fef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "APP-subnet-1"
            },
            "tags_all": {
              "Name": "APP-subnet-1"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-0d3cd1c122e0f2320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.96.0/20",
            "id": "subnet-0d3cd1c122e0f2320",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "APP-subnet-2"
            },
            "tags_all": {
              "Name": "APP-subnet-2"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-051c2f1af9017ac89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.160.0/20",
            "id": "subnet-051c2f1af9017ac89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "APP-subnet-3"
            },
            "tags_all": {
              "Name": "APP-subnet-3"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-0b35759c88417cc60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.16.0/20",
            "id": "subnet-0b35759c88417cc60",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "DB-subnet-1"
            },
            "tags_all": {
              "Name": "DB-subnet-1"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-08e1ac1acd078ce19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.80.0/20",
            "id": "subnet-08e1ac1acd078ce19",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "DB-subnet-2"
            },
            "tags_all": {
              "Name": "DB-subnet-2"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-06ce0d56cbb3c7959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.144.0/20",
            "id": "subnet-06ce0d56cbb3c7959",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "DB-subnet-3"
            },
            "tags_all": {
              "Name": "DB-subnet-3"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "reserved",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-07bffc9c25561a611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.0.0/20",
            "id": "subnet-07bffc9c25561a611",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "RESERVED-subnet-1"
            },
            "tags_all": {
              "Name": "RESERVED-subnet-1"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-02b827ae0942ea114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.64.0/20",
            "id": "subnet-02b827ae0942ea114",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "RESERVED-subnet-2"
            },
            "tags_all": {
              "Name": "RESERVED-subnet-2"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-0226c8147a450f00f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.128.0/20",
            "id": "subnet-0226c8147a450f00f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "RESERVED-subnet-3"
            },
            "tags_all": {
              "Name": "RESERVED-subnet-3"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-02225fc4879630215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.16.48.0/20",
            "id": "subnet-02225fc4879630215",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "WEB-subnet-1"
            },
            "tags_all": {
              "Name": "WEB-subnet-1"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-07ba444d910507c56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.112.0/20",
            "id": "subnet-07ba444d910507c56",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "WEB-subnet-2"
            },
            "tags_all": {
              "Name": "WEB-subnet-2"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:subnet/subnet-02cacbf0e64b8f2e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.176.0/20",
            "id": "subnet-02cacbf0e64b8f2e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374072300041",
            "tags": {
              "Name": "WEB-subnet-3"
            },
            "tags_all": {
              "Name": "WEB-subnet-3"
            },
            "vpc_id": "vpc-034de7e9e7a5f137c"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374072300041:vpc/vpc-034de7e9e7a5f137c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-0bb148dd2803d14c3",
            "default_route_table_id": "rtb-09fdd5d1b2d905f3d",
            "default_security_group_id": "sg-024690325f30250ec",
            "dhcp_options_id": "dopt-08cdb15ee51fe2a4b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-034de7e9e7a5f137c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09fdd5d1b2d905f3d",
            "owner_id": "374072300041",
            "tags": {
              "Name": "TerraformVPC"
            },
            "tags_all": {
              "Name": "TerraformVPC"
            }
          }
        }
      ]
    }
  ]
}